--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,7 @@ html, body{
     overflow: hidden;
     font-family: 'Baloo', cursive;
     font-size: 16px;
+    /*background-color: grey;*/
 }
 
 .main{
@@ -29,7 +30,9 @@ html, body{
 }
 
 img{
-    width: 90px!important;
+    width: 120px!important;
+    transform: scale(2.2,2.2);
+    margin: 0 auto;
 }
 
 .clouds{
