--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,7 @@ html, body{
     margin: 0;
     height: 100vh;
     width: 100vw;
+    /*max-width: 500px;*/
     min-width: 0px!important;
     overflow: hidden;
     font-family: 'Baloo', cursive;
@@ -20,6 +21,10 @@ html, body{
 .city{
     text-align: right;
 }
+.color{
+    /*color: white;*/
+    /*background-color: #0262B6;*/
+}
 
 .date{
     display: inline-block;
@@ -29,11 +34,12 @@ html, body{
     font-size: 1.2em;
     padding: 5px;
     height: 100%;
-    background-color: lightgrey;
+    text-transform: capitalize;
+    background-color: #ededed;
 }
 
 .fore{
-    background-color: lightgrey;
+    background-color: #ededed;
     border-right: 1px solid grey;
     text-align: center;
     padding: 0;
@@ -91,8 +97,28 @@ img{
 
 
 
+@media screen and (min-width: 768px){
+    .temp-text{
+        text-align: center;
+    }
+}
 
 
+@media screen and (min-width: 1200px){
+    .weather-text{
+        text-align: center;
+        margin-top: 0;
+    }
+
+    .date, .city{
+        text-align: center;
+        background-color: white!important;
+    }
+
+    .city{
+        font-size: 40px!important;
+    }
+}
 
 
 
