--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,7 @@ html, body{
     height: 100vh;
     width: 100vw;
     /*max-width: 500px;*/
-    min-width: 0px!important;
+    min-width: 320px!important;
     overflow: hidden;
     font-family: 'Baloo', cursive;
     font-size: 16px;
@@ -12,7 +12,7 @@ html, body{
 
 .main{
     position: relative;
-    border: 1px solid red;
+    /*border: 1px solid red;*/
     height: 100%;
     top: 50%;
     transform: translateY(-50%);
@@ -62,9 +62,10 @@ html, body{
 .weather-icon{
     display: inline-block;
     position: relative;
+    padding-left: 10px;
     top: 30px;
     font-size: 80px;
-    transform: scale(2.5, 2.5);
+    transform: scale(2.3, 2.3);
 
     text-align: center;
     margin: 0 auto;
@@ -94,8 +95,13 @@ img{
     /*font-size: 90px!important;*/
 }
 
+.temp-high{
+    color: red;
+}
 
-
+.temp-low{
+    color: #0262B6;
+}
 
 @media screen and (min-width: 768px){
     .temp-text{
