--- a/styles/style.css
+++ b/styles/style.css
@@ -103,6 +103,10 @@ img{
     color: #0262B6;
 }
 
+.day{
+    text-transform: capitalize;
+}
+
 @media screen and (min-width: 768px){
     .temp-text{
         text-align: center;
