--- a/styles/style.css
+++ b/styles/style.css
@@ -69,8 +69,7 @@ html, body{
 
 .fore-icon{
     font-weight: bolder;
-    font-size: 50px;
-    transform: scale(1.5, 1.5);
+    font-size: 70px;
     padding: 0;
 }
 
@@ -79,6 +78,9 @@ html, body{
 .weather-text{
     /*padding: 0 10px;*/
     text-align: center;
+    font-size: 1.2em;
+    position: relative;
+    top: -20px;
 }
 
 .weather-icon{
@@ -97,7 +99,7 @@ html, body{
 
 .temp-text{
     display: inline-block;
-    height: 100%;
+    /*height: 70%!important;*/
     width: 100%;
     font-size: 90px;
     text-align: center;
@@ -123,6 +125,10 @@ img{
 }
 .hot{
     color: #D35400;
+}
+.day, .temp-high, .temp-low{
+    position: relative;
+    top: -20px;
 }
 
 .day{
