--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,7 @@ html, body{
     overflow: hidden;
     font-family: 'Baloo', cursive;
     font-size: 16px;
+    background-color: #0262B6;
 }
 
 .main{
