--- a/style.css
+++ b/style.css
@@ -3,19 +3,52 @@ html, body{
     margin: 0;
     height: 100vh;
     width: 100vw;
-    min-width: 320px;
-    min-height: 480px;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: scroll;
     font-family: 'Baloo', cursive;
     font-size: 16px;
     background-color: #0262B6;
+
+     -ms-overflow-style: none;
+     /*-moz-scrollbar: none;*/
+}
+
+/*scrollbars*/
+body::-webkit-scrollbar{
+    display: none;
+}
+
+.more-info-container{
+    padding: 20px 0;
+    color: white;
+    font-size: 1.2em;
+}
+.more-info-description{
+    width: 100vw;
+}
+
+.more-info-container .row:last-of-type{
+    position: relative;
+    top: 20px;
+    padding-bottom: 20px;
+}
+
+.left{
+    text-align: right;
 }
 
 .main{
-    position: relative;
+    position: absolute;
     height: 100%;
+    width: 100%;
+    /*height: 480px;*/
+    /*width: 320px;*/
+    min-width: 320px;
+    min-height: 480px;
+
     top: 50%;
-    transform: translateY(-50%);
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .city{
@@ -78,6 +111,7 @@ html, body{
 .weather-icon{
     display: inline-block;
     position: relative;
+    overflow: hidden;
     top: 20px;
     font-size: 80px;
     transform: scale(2.3, 2.3);
