--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ body::-webkit-scrollbar{
     width: 100%;
     /*height: 480px;*/
     /*width: 320px;*/
+    padding-top: 5px;
     min-width: 320px;
     min-height: 480px;
 
