--- a/style.css
+++ b/style.css
@@ -41,22 +41,19 @@ body::-webkit-scrollbar{
     position: absolute;
     height: 100%;
     width: 100%;
-    /*height: 480px;*/
-    /*width: 320px;*/
     padding-top: 5px;
     min-width: 320px;
     min-height: 480px;
-
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
-.city{
+.header-city{
     text-align: right;
 }
 
-.date{
+.header-date{
     display: inline-block;
     white-space: nowrap;
     overflow: hidden;
@@ -102,14 +99,14 @@ body::-webkit-scrollbar{
     font-size: 70px;
 }
 
-.weather-text{
+.today-weather{
     position: relative;
     top: -20px;
     text-align: center;
-    font-size: 1.2em;
+    font-size: 1.3em;
 }
 
-.weather-icon{
+.today-icon{
     display: inline-block;
     position: relative;
     overflow: hidden;
@@ -123,7 +120,7 @@ body::-webkit-scrollbar{
     /*width: 100%;*/
 }
 
-.temp-text{
+.today-temp{
     font-size: 90px;
     text-align: center;
 }
@@ -134,20 +131,70 @@ body::-webkit-scrollbar{
 .hot{
     color: #D35400;
 }
-.day, .temp-high, .temp-low{
+.fore-day, .fore-temp-high, .fore-temp-low{
     position: relative;
     top: -20px;
 }
 
-.day{
+.fore-day{
     text-transform: capitalize;
 }
 
+@media screen and (min-width: 480px){
+    .more-info-container{
+        /*font-size: 1.4em;*/
+    }
+
+    .location-text > p{
+        font-size: 1.3em;
+    }
+}
+
+@media screen and (min-width: 640px){
+    .location-text > p{
+        font-size: 1.7em;
+    }
+
+    .today-icon{
+        font-size: 150px;
+    }
+
+    .today-temp{
+        font-size: 100px;
+    }
+
+    .fore-icon{
+        font-size: 90px;
+    }
+
+    .fore-day{
+        font-size: 1.4em;
+    }
+
+    .fore-temp-low, .fore-temp-high{
+        font-size: 1.3em;
+    }
+
+    .today-weather{
+        font-size: 1.7em;
+    }
+}
+
 @media screen and (min-width: 768px){
-    .temp-text{
+    .today-temp{
+        text-align: center;
+    }
+
+    .header-date, .header-city{
         text-align: center;
     }
 }
+
+/*@media screen and (min-height: 800px){
+    .more-info-container{
+        font-size: 1.3em;
+    }
+}*/
 
 
 
