--- a/style.css
+++ b/style.css
@@ -24,7 +24,8 @@ body::-webkit-scrollbar{
     padding-top: 5px;
     min-width: 320px;
     min-height: 480px;
-    max-width: 1680px;
+    /*max-width: 1680px;*/
+    max-width: 768px;
     max-height: 1050px;
     top: 50%;
     left: 50%;
@@ -59,6 +60,8 @@ body::-webkit-scrollbar{
 .fore{
     position: relative;
     background-color: #ededed;
+    background-color: #f3f3f3;
+    color: black;
     text-align: center;
     padding: 0;
 }
@@ -101,6 +104,7 @@ body::-webkit-scrollbar{
 }
 
 .today-temp{
+    position: relative;
     font-size: 5.5em;
     text-align: center;
 }
@@ -141,23 +145,28 @@ body::-webkit-scrollbar{
     text-align: right;
 }
 
-@media screen and (min-width: 480px){
-    .location-text > p{
-        font-size: 1.3em;
-    }
-}
+@media screen and (min-width: 768px){
 
-@media screen and (min-width: 640px){
     .location-text > p{
         font-size: 1.7em;
     }
 
     .today-icon{
         font-size: 150px;
+        position: relative;
+        top: 40px;
     }
 
     .today-temp{
         font-size: 100px;
+        text-align: center;
+        top: 15px;
+    }
+
+    .fore{
+        background-color: transparent;
+        color: white;
+        top: 70px;
     }
 
     .fore-icon{
@@ -174,22 +183,17 @@ body::-webkit-scrollbar{
 
     .today-weather{
         font-size: 1.7em;
+        top: 10px;
     }
-}
 
-@media screen and (min-width: 768px){
-    .today-temp{
-        text-align: center;
+    .fore-temp-high{
+        color: white;
+        top: -15px;
     }
 
     .header-city{
         position: relative;
         top: -10px;
-    }
-
-    .today-icon{
-        position: relative;
-        top: 40px;
     }
 
     .header-date, .header-city{
